<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9FC0EC"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="96dp"
        android:text="@string/Username"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toEndOf="@+id/setting_user_head_image"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setting_bio_update"
        android:layout_width="315dp"
        android:layout_height="225dp"
        android:background="@drawable/rounded_edittext_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.77"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/setting_updatebio_button"
        android:layout_width="194dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button_image"
        android:text="@string/click_to_update_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_bio_update" />

    <ImageView
        android:id="@+id/setting_user_head_image"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_button_image"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        tools:srcCompat="@drawable/choicepfp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#9FC0EC"
        android:text="Jason"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="286dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button_image"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/SettingGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="boy"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyBio"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/setting_bio_update"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_button"
        app:layout_constraintVertical_bias="0.777" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Gender"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/setting_upload_photo"
        android:layout_width="133dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button_image"
        android:text="upload photo"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_user_head_image"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>